--- a/views/index.jade
+++ b/views/index.jade
@@ -10,6 +10,5 @@ html
         display: none;
       }
   body
-    #content(v-cloak)
-      H1 {{text}}
-      script(src="/browserify/index/logic.js")
+    #container
+    script(src="/browserify/index/logic.js")
