--- a/views/index.jade
+++ b/views/index.jade
@@ -6,8 +6,12 @@ html
     link(rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css")
     link(rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css")
     style.
-      [v-cloak] {
-        display: none;
+      body {
+        margin: 0px;
+      }
+
+      #container {
+        display: flex;
       }
   body
     #container
